[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/card_battle/battle_board.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/battle_hud.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/bug_reporter.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/battle/arena_environment.tscn" id="4"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.02, 0.02, 0.06, 1)
sky_horizon_color = Color(0.08, 0.05, 0.12, 1)
ground_bottom_color = Color(0.02, 0.02, 0.04, 1)
ground_horizon_color = Color(0.08, 0.05, 0.12, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.25, 0.2, 0.3, 1)
ambient_light_energy = 0.3
tonemap_mode = 2
ssao_enabled = true
glow_enabled = true
glow_intensity = 0.4
glow_bloom = 0.15

[sub_resource type="SphereShape3D" id="SphereShape3D_hero"]
radius = 0.5

[node name="BattleBoard" type="Node3D"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 2, 8, 2)
light_energy = 0.2
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 9)
fov = 45.0

[node name="ArenaEnvironment" parent="." instance=ExtResource("4")]

[node name="PlayerSide" type="Node3D" parent="."]

[node name="HandArea" type="Node3D" parent="PlayerSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 4.5)

[node name="BoardSlots" type="Node3D" parent="PlayerSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 2.5)

[node name="HeroPortrait" type="Area3D" parent="PlayerSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.0, 0.3, 3.5)
input_ray_pickable = true

[node name="HeroModel" type="Node3D" parent="PlayerSide/HeroPortrait"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerSide/HeroPortrait"]
shape = SubResource("SphereShape3D_hero")

[node name="HeroLabel" type="Label3D" parent="PlayerSide/HeroPortrait"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, 0)
pixel_size = 0.008
text = "HERO"
font_size = 20
outline_size = 8
modulate = Color(0.3, 0.7, 1, 1)
billboard = 1

[node name="EnemySide" type="Node3D" parent="."]

[node name="HandArea" type="Node3D" parent="EnemySide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, -5.0)

[node name="BoardSlots" type="Node3D" parent="EnemySide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -2.5)

[node name="HeroPortrait" type="Area3D" parent="EnemySide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.0, 0.3, -3.5)
input_ray_pickable = true

[node name="HeroModel" type="Node3D" parent="EnemySide/HeroPortrait"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemySide/HeroPortrait"]
shape = SubResource("SphereShape3D_hero")

[node name="HeroLabel" type="Label3D" parent="EnemySide/HeroPortrait"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, 0)
pixel_size = 0.008
text = "ENEMY"
font_size = 20
outline_size = 8
modulate = Color(1, 0.3, 0.3, 1)
billboard = 1

[node name="BattleHUD" parent="." instance=ExtResource("2")]

[node name="BugReporter" parent="." instance=ExtResource("3")]
